--- a/index.html
+++ b/index.html
@@ -5,28 +5,50 @@
     <title>Document</title>
 </head>
 <body>
+
+    <h1>Welcome to <mark>Incredible India</mark></h1>
+
+    <p><b>Discover the diversity,beauty,and rich heritage od India!</b></p>
+
+    <li><a href="index.html">Home</a></li>
+            <li><a href="culture.html">Culture</a></li>
+                <li><a href="landmarks.html">Landmarks</a></li>
+                <li><a href="cuisine.html">Cuisine</a></li>
+                <li><a href="contact_us.html">Contact Us</a></li>    
+
     <h1>About India</h1>
         <p>India is a land of incredible diversity.From the snow-capped peaks of the Himalayas to the serene backwaters 
             of India tells a unique story.India is the <b>second-most populous country</b>
             in the world and boasts a history spanning thousands od years.Its rich traditions
             have left an indilible mark on the world.
         </p>
-        <img src="indianmap.jpg" alt="Image of India" width="500px" height="300px">
+        <img src="indianmap.jpeg" alt="Image of India" width="500px" height="300px">
 
-        <div><h1>Architecture:</h1>Majestic monuments like tje Taj Mahal and Red Fort.</div>
+        <div><b>Architecture</b>:Majestic monuments like tje Taj Mahal and Red Fort.</div>
 
-        <div><h1>Cuisine:</h1>Diverse flavors from spicy curries to sweet desserts.</div>
+        <div><b>Cuisine</b>:Diverse flavors from spicy curries to sweet desserts.</div>
 
-        <div><h1>Culture:</h1>sVibrant festivals,classical dances,and colorful attire.</div>
+        <div><b>Culture</b>:Vibrant festivals,classical dances,and colorful attire.</div>
 
         <h1>Famous Landmarks</h1>
-        <p>India is home to 29 UNESCO World Heritage Sites,making it a paradise for
+        <p>India is home to <mark>29 UNESCO World Heritage Sites,</mark>making it a paradise for
              history and architecture enthusiasts.
-
+   
         </p>
+        1.<img src="tajmahal.jpg.jpeg" height="300px" width="500px"><br>
 
+          <p>The Taj Mahal,a symbol eternal love.</p>
+            
+        2.<img src="kutubminar.jpg.jpeg" height="300px" width="500px"><br>
+
+        <p>The Qutub Minar,an architectural marvel in Delhi</p>
+
+        <p>Don't miss exploring the intricate carvings,towering minarets,
+            and breathtaking landscapes!</p>
+        </p>
+ 
     <h1>Indian Culture</h1>
-    <p>India's cultural heritage is a blend of verious traditions,langauge,and 
+    <p>India's <b>cultural heritage</b> is a blend of verious traditions,langauge,and 
         religious.Each region has its unique identity that are celebrated through
         festivals and daily life.Here are some <br>highlights:</br>
     </p>
@@ -34,7 +56,12 @@
 
     <ul>Music:Traditional instruments like the sitar,tabla,and veena.</ul>
     
-    <ul>Festivals:Diwali,Holi,Eid,and Christmas bring people together in celebration.</ul>
+    <ul>Festivals:Diwali,Holi,Eid,and Christmas bring people together in 
+        celebration.</ul>
+
+        <img src="culture.jpeg" height="300px" width="500px">
+
+        <p>A glimpse of Indian Classical Dance</p>
 
     <h1>Delicious Indian Cuisine</h1>
     <p>Indian food is as diverse as its culture.
@@ -42,10 +69,26 @@
        something for everyone.Popular dishes include:  
     </p>
 
-    <ul>North Indian:Butter chicken,naan,and paneer tikka.</ul>
+  <div><b>North Indian:</b>Butter chicken,naan,and paneer tikka.</div>
 
-    <ul>South Indian:Dosa,idli,and sambhar.</ul>
+    <div><b>South Indian:</b>Dosa,idli,and sambhar.</div>
 
-    <ul>Street Food:Pani puri,chaat,and vada pav.</ul> 
+    <div><b>Street Food:</b>Pani puri,chaat,and vada pav.</div>
+
+    <img src="biryani.jpeg" height="300px" width="500px">
+
+    <p>Delicious Hyderabadi Biryani</p>
+
+    <img src="streetfood.jpeg" height="300px" width="500px">
+
+    <p>Colorful and flavorful Indian street food</p>
+
+    Contact us at<li><a href="info@incredibleindia.com.html">info@incredibleindia.com</a></li>
+    <footer>
+        ©2025 Incredible India Project.All rights reserved.
+    </footer>
+
+    Follow us on:<a href="Facebook|Twitter"><u>Facebook|Twitter</u></a>
+
 </body>
 </html>
